[package]
name = "asdf"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/Frefreak/test-cargo-dist"
description = "this is just a test project, please ignore"
homepage = "https://github.com/Frefreak/test-cargo-dist"

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
